WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111776
REGRESSION: fast/border/border-fit-2.html needs updating
https://bugs.webkit.org/show_bug.cgi?id=111776
Summary
REGRESSION: fast/border/border-fit-2.html needs updating
Dave Hyatt
Reported
2013-03-07 14:26:36 PST
This test is incorrectly shrinking the border image because we need to apply some clamping to the border-fit. The pixel results *are* still changing though, since a layout-time shrinkage will not result in right-aligned boxes in an LTR block when the left edge gets chopped. We'll have to see if this behavioral change ends up being a problem, but for now we'll rebaseline and assume it will be ok.
Attachments
Patch
(22.88 KB, patch)
2013-03-07 14:30 PST
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2013-03-07 14:30:08 PST
Created
attachment 192085
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-03-07 14:31:46 PST
Comment on
attachment 192085
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192085&action=review
> Source/WebCore/ChangeLog:10 > + old code did.. The pixel results *are* still changing though,
Two periods.
> Source/WebCore/ChangeLog:26 > + Need a short description (OOPS!). > + Need the bug URL (OOPS!). > + > + Reviewed by NOBODY (OOPS!). > + > + No new tests (OOPS!).
OOPS!
Dave Hyatt
Comment 3
2013-03-07 14:36:35 PST
Landed in
r145139
.
Eric Seidel (no email)
Comment 4
2013-03-07 14:37:20 PST
Someone should tell hyatt about webkit-patch land, which magically updates the bug for you. :)
Radar WebKit Bug Importer
Comment 5
2013-03-13 21:17:50 PDT
<
rdar://problem/13417623
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug